// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideMenu Theme status label when active theme is not the current theme and isPurchased is true renders correctly 1`] = `
<Fragment>
  <ExpandMenuRoutes
    route="styles"
  />
  <ExpandMenuRoutes
    route="history"
  />
  <ExpandMenuRoutes
    route="options"
  />
  <ExpandMenuRoutes
    key="0"
    route="section/0"
  />
  <ExpandMenuRoutes
    key="1"
    route="section/1"
  />
  <ExpandMenuRoutes
    key="2"
    route="section/2"
  />
  <styled.nav
    collapsed="initial"
  >
    <styled.div>
      <styled.div
        innerRef={
          Object {
            "current": null,
          }
        }
      >
        Catstone Box
      </styled.div>
      <Tooltip
        message="This theme is not currently applied to your store."
      >
        <styled.div
          status="INACTIVE THEME"
        >
          INACTIVE THEME
        </styled.div>
      </Tooltip>
    </styled.div>
    <styled.div>
      <Route
        path="/"
        render={[Function]}
      />
    </styled.div>
    <styled.div>
      <styled.a
        href="/"
        target="_blank"
      >
        <styled.span>
          View live store
        </styled.span>
        <styled.div>
          <Icon
            glyph="externalLink"
            size="small"
          />
        </styled.div>
      </styled.a>
      <Tooltip
        hideDelay={0}
        message="Collapse menu"
      >
        <styled.button
          collapsed="initial"
          onClick={[Function]}
        />
      </Tooltip>
    </styled.div>
  </styled.nav>
</Fragment>
`;

exports[`SideMenu Theme status label when activeTheme is the current theme and isPurchased is true renders correctly 1`] = `
<Fragment>
  <ExpandMenuRoutes
    route="styles"
  />
  <ExpandMenuRoutes
    route="history"
  />
  <ExpandMenuRoutes
    route="options"
  />
  <ExpandMenuRoutes
    key="0"
    route="section/0"
  />
  <ExpandMenuRoutes
    key="1"
    route="section/1"
  />
  <ExpandMenuRoutes
    key="2"
    route="section/2"
  />
  <styled.nav
    collapsed="initial"
  >
    <styled.div>
      <styled.div
        innerRef={
          Object {
            "current": null,
          }
        }
      >
        Catstone Box
      </styled.div>
      <Tooltip
        message="This theme is currently applied to your store."
      >
        <styled.div
          status="ACTIVE THEME"
        >
          ACTIVE THEME
        </styled.div>
      </Tooltip>
    </styled.div>
    <styled.div>
      <Route
        path="/"
        render={[Function]}
      />
    </styled.div>
    <styled.div>
      <styled.a
        href="/"
        target="_blank"
      >
        <styled.span>
          View live store
        </styled.span>
        <styled.div>
          <Icon
            glyph="externalLink"
            size="small"
          />
        </styled.div>
      </styled.a>
      <Tooltip
        hideDelay={0}
        message="Collapse menu"
      >
        <styled.button
          collapsed="initial"
          onClick={[Function]}
        />
      </Tooltip>
    </styled.div>
  </styled.nav>
</Fragment>
`;

exports[`SideMenu Theme status label when isPurchased is false renders correctly 1`] = `
<Fragment>
  <ExpandMenuRoutes
    route="styles"
  />
  <ExpandMenuRoutes
    route="history"
  />
  <ExpandMenuRoutes
    route="options"
  />
  <ExpandMenuRoutes
    key="0"
    route="section/0"
  />
  <ExpandMenuRoutes
    key="1"
    route="section/1"
  />
  <ExpandMenuRoutes
    key="2"
    route="section/2"
  />
  <styled.nav
    collapsed="initial"
  >
    <styled.div>
      <styled.div
        innerRef={
          Object {
            "current": null,
          }
        }
      >
        Catstone Box
      </styled.div>
      <Tooltip
        message="To use this theme, you must buy it before you can save or publish to your store."
      >
        <styled.div
          status="THEME PREVIEW"
        >
          THEME PREVIEW
        </styled.div>
      </Tooltip>
    </styled.div>
    <styled.div>
      <Route
        path="/"
        render={[Function]}
      />
    </styled.div>
    <styled.div>
      <styled.a
        href="/"
        target="_blank"
      >
        <styled.span>
          View live store
        </styled.span>
        <styled.div>
          <Icon
            glyph="externalLink"
            size="small"
          />
        </styled.div>
      </styled.a>
      <Tooltip
        hideDelay={0}
        message="Collapse menu"
      >
        <styled.button
          collapsed="initial"
          onClick={[Function]}
        />
      </Tooltip>
    </styled.div>
  </styled.nav>
</Fragment>
`;

exports[`SideMenu renders 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <SideMenu
    activeThemeId="1234567-1223-011123-111111"
    configurationId="4444-55555-77777-00000"
    history={[MockFunction]}
    isPurchased={true}
    location={[MockFunction]}
    match={[MockFunction]}
    postThemeConfigData={[MockFunction]}
    settings={
      Object {
        "alert-color": "#fff",
        "body-font": "Google_Karla_400",
        "brandpage_products_per_page": 12,
        "show_accept_amex": true,
      }
    }
    staticContext={[MockFunction]}
    themeDesignSections={
      Array [
        "cat",
        "named",
        "moe",
      ]
    }
    themeId="1234567-1223-011123-111111"
    themeName="Caterstone"
    variationId="2222-11111-0000-44444"
    versionId="2221-211111-0111-41111"
  />
</Router>
`;
